# larisin-ai-backend

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: deploy.yml
larisin_pkg/: pyproject.toml
larisin_pkg/db/: blob.py  cosmos.py
larisin_pkg/src/larisin_pkg/: __init__.py
