[project]
name = "larisin-pkg"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "diyangraditya144@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "azure-cosmos>=4.0.0",
    "azure-storage-blob>=12.28.0",
]

[project.scripts]
larisin-pkg = "larisin_pkg:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
